--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -170,7 +170,7 @@
 .home-hero-section {
   margin-top: 80px;
   padding: 5rem 2rem;
-  background: linear-gradient(135deg, #eff6ff 0%, #dbeafe 100%);
+  /* background: linear-gradient(135deg, #eff6ff 0%, #dbeafe 100%); */
   background: #2563eb;
   position: relative;
   overflow: hidden;
